[Kiramu-24]: changed .anime__text's oveflow to scroll, changed weight text of searcher to regular

--- a/src/components/ui/Search/_search.scss
+++ b/src/components/ui/Search/_search.scss
@@ -12,14 +12,14 @@
 
     height: 4.4rem;
 
-    padding: 1.2rem 2rem;
+    padding: 1.2rem 1.5rem;
 
     border: none;
     border-radius: $border-radius;
 
     background-color: $bg-color-light;
 
-    font-family: $primary-font-medium;
+    font-family: $primary-font-regular;
     font-size: $xs-font-size;
     color: $color-active;
 
