--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -301,6 +301,22 @@ main {
 .anime__text {
   font-family: "MontserratSemiBold", sans-serif;
   font-size: 1.7rem;
+  max-height: 37rem;
+  height: 100%;
+  overflow-y: scroll;
+}
+.anime__text::-webkit-scrollbar {
+  width: 8px;
+  border-radius: 10px;
+  background-color: transparent;
+}
+.anime__text::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #393939;
+}
+.anime__text::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: transparent;
 }
 .anime__title {
   margin-bottom: 2rem;
@@ -314,22 +330,6 @@ main {
   font-family: "MontserratMedium", sans-serif;
   font-size: 1.6rem;
   color: #cbcbcb;
-  -webkit-line-clamp: 6;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  overflow-y: scroll;
-}
-.anime__description::-webkit-scrollbar {
-  width: 8px;
-  background-color: transparent;
-}
-.anime__description::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  background-color: #393939;
-}
-.anime__description::-webkit-scrollbar-track {
-  border-radius: 10px;
-  background-color: transparent;
 }
 .anime__series, .anime__genres {
   color: #cbcbcb;
@@ -381,11 +381,11 @@ main {
   max-width: 100rem;
   width: 100%;
   height: 4.4rem;
-  padding: 1.2rem 2rem;
+  padding: 1.2rem 1.5rem;
   border: none;
   border-radius: 10rem;
   background-color: #262626;
-  font-family: "MontserratMedium", sans-serif;
+  font-family: "MontserratRegular", sans-serif;
   font-size: 1.6rem;
   color: #ffffff;
   outline: none;
