--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,6 +25,7 @@
 @import '../pages/NotFound/not-found';
 @import '../pages/Anime/anime';
 @import '../pages/SearchPage/search-page';
+@import '../pages/Auth/auth';
 
 // UI
 
