--- a/src/pages/Anime/_anime.scss
+++ b/src/pages/Anime/_anime.scss
@@ -2,6 +2,19 @@
   max-width: 100rem;
   width: 100%;
 
+  &__container {
+    animation: fadeIn 1s ease-in-out forwards;
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+      }
+      to {
+        opacity: 1;
+      }
+    }
+  }
+
   &__image {
     max-width: 26rem;
     width: 100%;
