--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,6 +12,7 @@
 
 @import '../components/Heading/heading';
 @import '../components/HeroSection/hero-section';
+@import '../components/Auth/auth';
 
 // Layout
 
@@ -25,7 +26,6 @@
 @import '../pages/NotFound/not-found';
 @import '../pages/Anime/anime';
 @import '../pages/SearchPage/search-page';
-@import '../pages/Auth/auth';
 
 // UI
 
