--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,7 +12,6 @@
 
 @import '../components/Heading/heading';
 @import '../components/HeroSection/hero-section';
-@import '../components/Auth/auth';
 
 // Layout
 
@@ -26,6 +25,8 @@
 @import '../pages/NotFound/not-found';
 @import '../pages/Anime/anime';
 @import '../pages/SearchPage/search-page';
+@import '../pages/Auth/auth';
+@import '../pages/Profile/profile';
 
 // UI
 
