--- a/src/components/HeroSection/_hero-section.scss
+++ b/src/components/HeroSection/_hero-section.scss
@@ -5,7 +5,7 @@
   width: 100%;
 
   height: 70rem;
-  
+
   margin-bottom: 7rem;
 
   background: url('/images/nebo.jpg') no-repeat;
@@ -28,7 +28,7 @@
     background: rgba(18, 18, 18, 0.5);
     backdrop-filter: blur(5px);
 
-    text-align: center
+    text-align: center;
   }
 
   &__heading {
