--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -31,6 +31,7 @@
 // UI
 
 @import '../components/ui/Navigation/navigation';
+@import '../components/ui/Comments/comments';
 @import '../components/ui/Search/search';
 @import '../components/ui/Button/button';
 @import '../components/ui/Card/card';
