added comments features, favorites

--- a/src/components/Heading/_heading.scss
+++ b/src/components/Heading/_heading.scss
@@ -7,7 +7,7 @@
 
   &__title {
     font-family: $primary-font-bold;
-    font-size: $lg-font-size;
+    font-size: $xm-font-size;
   }
 
   &__description {
