--- a/src/components/Comments/_comments.scss
+++ b/src/components/Comments/_comments.scss
@@ -3,24 +3,13 @@
 
   &__header {
     font-family: $primary-font-bold;
-    font-size: $lg-font-size;
-  }
-
-  &__input {
-    width: 100%;
-    margin-top: 1rem;
-    padding: 1rem;
-    border: 1px solid $bg-color-lighter;
-    border-radius: 10rem;
-    background-color: $bg-color-light;
-    font-family: $secondary-font-regular;
-    font-size: $xs-font-size;
-    color: $color-active;
+    font-size: $md-font-size;
   }
 
   &__add {
     position: relative;
     margin-top: 2rem;
+    margin-bottom: 5rem;
 
     ion-icon {
       position: absolute;
@@ -34,6 +23,10 @@
 
       &:hover {
         color: $color-active;
+      }
+
+      &:active {
+        color: rgb(3, 192, 3);
       }
     }
   }
@@ -54,5 +47,62 @@
   &__warning {
     font-family: $primary-font-medium;
     font-size: $xs-font-size;
+  }
+
+  &__item {
+    display: flex;
+    gap: 1.5rem;
+    margin-top: 2rem;
+    padding: 1rem;
+    border-radius: 1rem;
+    background-color: $bg-color-light;
+  }
+
+  &__avatar {
+    max-width: 5rem;
+    max-height: 5rem;
+    border: 2px solid $status-ongoing-color;
+    box-shadow: 0 0 4px $status-ongoing-color;
+    border-radius: $border-radius;
+  }
+
+  &__info {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  &__line {
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+    margin-top: 1rem;
+  }
+
+  &__username {
+    font-family: $primary-font-medium;
+    font-size: $sm-font-size;
+    color: $status-ongoing-color;
+    text-shadow: 0 0 5px $status-ongoing-color;
+  }
+
+  &__comment {
+    font-family: $primary-font-regular;
+    font-size: $xs-font-size;
+    padding-bottom: 1rem;
+  }
+
+  &__date {
+    font-family: $primary-font-regular;
+    font-size: 1.2rem;
+    color: $color-hover;
+  }
+
+  &__empty {
+    margin-top: 5rem;
+    font-family: $primary-font-semibold;
+    font-size: $md-font-size;
+    color: $color-ignore;
+    text-align: center;
   }
 }
