--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -108,7 +108,7 @@ main {
 }
 .heading__title {
   font-family: "MontserratBold", sans-serif;
-  font-size: 2.8rem;
+  font-size: 2.2rem;
 }
 .heading__description {
   font-family: "MontserratMedium", sans-serif;
@@ -157,6 +157,131 @@ main {
   font-family: "MontserratMedium", sans-serif;
   font-size: 2rem;
   color: #cbcbcb;
+}
+
+.comments {
+  margin-top: 10rem;
+}
+.comments__header {
+  font-family: "MontserratBold", sans-serif;
+  font-size: 2rem;
+}
+.comments__add {
+  position: relative;
+  margin-top: 2rem;
+  margin-bottom: 5rem;
+}
+.comments__add ion-icon {
+  position: absolute;
+  top: 50%;
+  right: 1rem;
+  font-size: 3rem;
+  color: #929292;
+  transform: translateY(-50%);
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+.comments__add ion-icon:hover {
+  color: #ffffff;
+}
+.comments__add ion-icon:active {
+  color: rgb(3, 192, 3);
+}
+.comments__attention {
+  display: flex;
+  gap: 0.5rem;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+  color: #929292;
+}
+.comments__attention ion-icon {
+  font-size: 3rem;
+}
+.comments__warning {
+  font-family: "MontserratMedium", sans-serif;
+  font-size: 1.6rem;
+}
+.comments__item {
+  display: flex;
+  gap: 1.5rem;
+  margin-top: 2rem;
+  padding: 1rem;
+  border-radius: 1rem;
+  background-color: #262626;
+}
+.comments__avatar {
+  max-width: 5rem;
+  max-height: 5rem;
+  border: 2px solid #6f42c1;
+  box-shadow: 0 0 4px #6f42c1;
+  border-radius: 10rem;
+}
+.comments__info {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.comments__line {
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+  margin-top: 1rem;
+}
+.comments__username {
+  font-family: "MontserratMedium", sans-serif;
+  font-size: 1.8rem;
+  color: #6f42c1;
+  text-shadow: 0 0 5px #6f42c1;
+}
+.comments__comment {
+  font-family: "MontserratRegular", sans-serif;
+  font-size: 1.6rem;
+  padding-bottom: 1rem;
+}
+.comments__date {
+  font-family: "MontserratRegular", sans-serif;
+  font-size: 1.2rem;
+  color: #cbcbcb;
+}
+.comments__empty {
+  margin-top: 5rem;
+  font-family: "MontserratSemiBold", sans-serif;
+  font-size: 2rem;
+  color: #929292;
+  text-align: center;
+}
+
+.favorites__list {
+  display: flex;
+  gap: 4rem;
+  margin-top: 5rem;
+}
+.favorites__item {
+  max-width: 26rem;
+  width: 100%;
+  background-color: #262626;
+  border-radius: 2rem;
+  transition: all 0.2s ease-in-out;
+}
+.favorites__item:hover {
+  background-color: #393939;
+}
+.favorites__image {
+  max-height: 37rem;
+  height: 100%;
+  filter: saturate(150%);
+  border: 1px solid #262626;
+  border-radius: 2rem;
+  transition: all 0.2s ease-in-out;
+}
+.favorites__title {
+  margin: 2rem;
+  font-family: "MontserratSemiBold", sans-serif;
+  font-size: 1.6rem;
+  color: #ffffff;
+  line-height: 1.2;
+  transition: all 0.2s ease-in-out;
 }
 
 .layout {
@@ -498,7 +623,7 @@ main {
   text-align: center;
 }
 .profile__username {
-  font-family: "PoppinsMedium", sans-serif;
+  font-family: "MontserratMedium", sans-serif;
   font-size: 2.8rem;
 }
 .profile__bio {
@@ -538,7 +663,7 @@ main {
   border: 1px solid #393939;
   border-radius: 10rem;
   background-color: #262626;
-  font-family: "PoppinsRegular", sans-serif;
+  font-family: "MontserratRegular", sans-serif;
   font-size: 1.6rem;
   color: #ffffff;
 }
@@ -556,57 +681,26 @@ main {
   max-width: 4.4rem;
   width: 100%;
   border-radius: 100%;
+  border: 2px solid #6f42c1;
+  box-shadow: 0 0 4px #6f42c1;
 }
 
-.comments {
-  margin-top: 10rem;
-}
-.comments__header {
-  font-family: "MontserratBold", sans-serif;
-  font-size: 2.8rem;
-}
-.comments__input {
-  width: 100%;
-  margin-top: 1rem;
-  padding: 1rem;
-  border: 1px solid #393939;
-  border-radius: 10rem;
-  background-color: #262626;
-  font-family: "PoppinsRegular", sans-serif;
-  font-size: 1.6rem;
-  color: #ffffff;
-}
-.comments__add {
-  position: relative;
-  margin-top: 2rem;
-}
-.comments__add ion-icon {
-  position: absolute;
-  top: 50%;
-  right: 1rem;
-  font-size: 3rem;
-  color: #929292;
-  transform: translateY(-50%);
-  cursor: pointer;
-  transition: all 0.2s ease-in-out;
-}
-.comments__add ion-icon:hover {
-  color: #ffffff;
-}
-.comments__attention {
+.favorite-btn {
   display: flex;
-  gap: 0.5rem;
   justify-content: center;
-  align-items: center;
+  align-self: center;
+  border-radius: 1rem !important;
+  gap: 1rem;
   margin-top: 2rem;
-  color: #929292;
+  line-height: 110%;
 }
-.comments__attention ion-icon {
-  font-size: 3rem;
+.favorite-btn--secondary {
+  background-color: #ffffff !important;
+  color: #131313 !important;
 }
-.comments__warning {
-  font-family: "MontserratMedium", sans-serif;
-  font-size: 1.6rem;
+.favorite-btn--secondary:hover {
+  color: #262626 !important;
+  background-color: #cbcbcb !important;
 }
 
 .search {
